Clear struct stat correctly. Fixes PR#46373.